# us-equity-research

./: .gitignore  BUILD_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
backtest/: README.md
design/: b0-conformance-diff.md  backtest-methodology.md  build-log.md  file-ownership.md  framework-critical-review.md  frameworkrunner-integration.md  live-tracking-spec.md  open-decisions.md  overnight-queue-context.md  overnight-queue-status.json  phase-e-calibration-summary.md  remediation-plan.md  session-handoff-v0_2_to_v0_3.md  skill-composition.md  sprint-3a-context.md  sprint-3a-status.json  sprint-3b-context.md  sprint-3c-context.md  sprint-4-item-8-skill-preamble.md  sprint-4-item-8-verifier-reachability.md  us-vs-china-delta-matrix.md
examples/: DLR_IC_memo.md  JPM_IC_memo.md  JPM_scenarios.json  JPM_source_tags.json  MRK_IC_memo.md  MRK_scenarios.json  MRK_source_tags.json  MRK_structured.json  MRK_verification_gates.json  NVDA_IC_memo.md  NVDA_scenarios.json  README.md  XOM_source_tags.json  XOM_structured.json  XOM_verification_gates.json
outputs/: APD_IC_memo.html  APD_IC_memo.md  APD_manifest.json  APD_scenarios.json  APD_source_tags.json  APD_structured.json  APD_verification_gates.json  CEG_IC_memo.html  CEG_IC_memo.md  CEG_manifest.json  CEG_manifest_seed.json  CEG_redteam_round_1.md  CEG_scenarios.json  CEG_structured.json  CEG_verification_gates.json  DLR_scenarios.json  DLR_source_tags.json  DLR_structured.json  DLR_verification_gates.json  ET_IC_memo.html  ET_IC_memo.md  ET_manifest.json  ET_scenarios.json  ET_source_tags.json  ET_structured.json  ET_verification_gates.json  FCX_IC_memo.html  FCX_IC_memo.md  FCX_manifest.json  FCX_redteam_round_1.md  FCX_redteam_round_2.md  FCX_scenarios.json  FCX_source_tags.json  FCX_structured.json  FCX_verification_gates.json  JPM_structured.json  JPM_verification_gates.json  LNG_IC_memo.html  LNG_IC_memo.md  LNG_manifest.json  (+28 more)
schemas/: memo.json  (+4 more)
(+330 files in other folders)
